src/graphql_schema/snapshots/tyorka_admin__graphql_schema__mutations__entity_order__shop_response_asc.snap
---
source: src/graphql_schema/mutations.rs
expression: response.data.into_json().unwrap()
---
{
  "saveShopOrder": [
    {
      "id": "1"
    },
    {
      "id": "2"
    }
  ]
}
